tests/paczka1/fuzzy1/46507705.err
Error in line 1: Tteqrhc S673 30,6
Error in line 6: S848 S470 61,9
Error in line 9: S848 S848 11,4
Error in line 18: Tteqrhc S848 283,7
Error in line 20: Tteqrhc S171 72,0
Error in line 14: S848 S171 21,8
Error in line 34: BFxVr2owjAx S470 32,7
